--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-oroca_bldc/.dep
-oroca_bldc/build/lst
+oroca_bldc/.dep/*
+oroca_bldc/build/lst/*
 oroca_bldc/build/oroca_bldc.dmp
 oroca_bldc/build/oroca_bldc.elf
 oroca_bldc/build/oroca_bldc.hex
 oroca_bldc/build/oroca_bldc.map
-oroca_bldc/build/obj
+oroca_bldc/build/obj/*
