mcpwm -> mc_interface -> app_configure /mc_configure ->  mavlink encoder->                                                                           ->  app 순으로 코드구조화

--- a/oroca_bldc_FW/Makefile
+++ b/oroca_bldc_FW/Makefile
@@ -141,6 +141,7 @@ CSRC = $(STARTUPSRC) \
        $(LIBSRC)/hwconf/hw_oroca.c\
        $(MCSRC)/mcpwm.c \
        $(MCSRC)/mc_interface.c \
+       $(MCSRC)/encoder.c \
        $(CORESRC)/ledpwm.c \
        $(CORESRC)/servo_dec.c \
        $(CORESRC)/uart3.c\
