벤자민 최신코드를 거의 살리는 중 하드웨어를 벤자민보드에 맞추었으니 대부분의 코드를 그대로 사용할 수 있을 것이라 생각됨
그러나
제어쪽 코드가 전혀 다르므로 모터쪽과 마브링크가 추가된 부분 때문에 대대적인 수정이 불가피함

작업해두었던 일부기능들이 코드를 원복하면서 재적용해야함....

신규보드가 필요함....

--- a/oroca_bldc_FW/Makefile
+++ b/oroca_bldc_FW/Makefile
@@ -144,6 +144,8 @@ CSRC = $(STARTUPSRC) \
        $(MCSRC)/encoder.c \
        $(CORESRC)/ledpwm.c \
        $(CORESRC)/servo_dec.c \
+       $(CORESRC)/servo_simple.c \
+       $(CORESRC)/servo.c \
        $(CORESRC)/uart3.c\
        $(CORESRC)/irq_handlers.c \
        $(CORESRC)/utils.c	\
