1. 컴파일에 필요한 모든 코드를 올림 2. 통신 패킷 처리하는 프로세스는 모두 주석처리     껍데기만 남김 comm_usb, comm_can,ppm,nrf, 3. 마브링크로 교체될 코드 packet, command 4. uart3 은 삭제 5. 기타등등
예정
gui -> comm_usb -> uart -> 마브링크 -> flash
디버깅 msg -> 마브링크 -> uart -> comm_usb ->gui

--- a/oroca_bldc_FW/Makefile
+++ b/oroca_bldc_FW/Makefile
@@ -129,34 +129,41 @@ LDSCRIPT= ld_eeprom_emu.ld
 # C sources that can be compiled in ARM or THUMB mode depending on the global
 # setting.
 CSRC = $(STARTUPSRC) \
-       $(KERNSRC) \
-       $(PORTSRC) \
-       $(OSALSRC) \
-       $(HALSRC) \
-       $(PLATFORMSRC) \
-       $(BOARDSRC) \
-       $(CHIBIOS)/os/various/syscalls.c \
-       $(CHIBIOS)/os/hal/lib/streams/memstreams.c \
-       $(CHIBIOS)/os/hal/lib/streams/chprintf.c \
-       $(LIBSRC)/hwconf/hw_oroca.c\
-       $(MCSRC)/mcpwm.c \
-       $(MCSRC)/mc_interface.c \
-       $(MCSRC)/encoder.c \
-       $(CORESRC)/ledpwm.c \
-       $(CORESRC)/servo_dec.c \
-       $(CORESRC)/servo_simple.c \
-       $(CORESRC)/servo.c \
-       $(CORESRC)/irq_handlers.c \
-       $(CORESRC)/utils.c	\
-       $(CORESRC)/timeout.c	\
-	   $(CORESRC)/buffer.c	\
-	   $(CORESRC)/conf_general.c \
-	   $(CORESRC)/eeprom.c \
-	   $(CORESRC)/flash_helper.c \
-	   $(CORESRC)/comm_can.c \
-	   $(CORESRC)/comm_usb.c \
-	   $(CORESRC)/comm_usb_serial.c \
-       $(APPSRC)/app.c \
+		$(KERNSRC) \
+		$(PORTSRC) \
+		$(OSALSRC) \
+		$(HALSRC) \
+		$(PLATFORMSRC) \
+		$(BOARDSRC) \
+		$(CHIBIOS)/os/various/syscalls.c \
+		$(CHIBIOS)/os/hal/lib/streams/memstreams.c \
+		$(CHIBIOS)/os/hal/lib/streams/chprintf.c \
+			$(LIBSRC)/hwconf/hw_oroca.c\
+				$(MCSRC)/mcpwm.c \
+				$(MCSRC)/mc_interface.c \
+				$(MCSRC)/encoder.c \
+					$(CORESRC)/ledpwm.c \
+					$(CORESRC)/led_external.c\
+					$(CORESRC)/ws2811.c \
+					$(CORESRC)/servo_dec.c \
+					$(CORESRC)/servo_simple.c \
+					$(CORESRC)/servo.c \
+					$(CORESRC)/irq_handlers.c \
+					$(CORESRC)/utils.c	\
+					$(CORESRC)/timeout.c	\
+					$(CORESRC)/buffer.c	\
+					$(CORESRC)/conf_general.c \
+					$(CORESRC)/eeprom.c \
+					$(CORESRC)/flash_helper.c \
+					$(CORESRC)/comm_can.c \
+					$(CORESRC)/comm_usb.c \
+					$(CORESRC)/comm_usb_serial.c \
+					$(CORESRC)/crc.c\
+				$(CORESRC)/spi_sw.c \
+				$(CORESRC)/rf.c \
+				$(CORESRC)/rfhelp.c \
+				$(CORESRC)/nrf_driver.c\
+		$(APPSRC)/app.c \
 		$(APPSRC)/app_ppm.c \
 		$(APPSRC)/app_adc.c \
 		$(APPSRC)/app_sten.c \
