gui쪽 마브링크정리

--- a/oroca_bldc_gui/Serial/Serial/Serial.csproj
+++ b/oroca_bldc_gui/Serial/Serial/Serial.csproj
@@ -69,17 +69,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ByteArrayUtil.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrameworkBitConverter.cs" />
-    <Compile Include="Mavlink.cs" />
-    <Compile Include="oroca.generated.cs" />
-    <Compile Include="oroca_codec.generated.cs" />
+    <Compile Include="mavlink.generated.cs" />
+    <Compile Include="mavlink\ByteArrayUtil.cs" />
+    <Compile Include="mavlink\FrameworkBitConverter.cs" />
+    <Compile Include="mavlink\Mavlink.cs" />
+    <Compile Include="mavlink_codec.generated.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
