--- a/oroca_bldc_FW/oroca_bldc_chibios/prj/oroca_bldc/.cproject
+++ b/oroca_bldc_FW/oroca_bldc_chibios/prj/oroca_bldc/.cproject
@@ -59,6 +59,7 @@
 								</option>
 								<option id="com.atollic.truestudio.as.symbols.defined.1013022463" name="Defined symbols" superClass="com.atollic.truestudio.as.symbols.defined" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F405xx"/>
+									<listOptionValue builtIn="false" value="CORTEX_USE_FPU=TRUE"/>
 								</option>
 								<inputType id="com.atollic.truestudio.as.input.589139570" name="Input" superClass="com.atollic.truestudio.as.input"/>
 							</tool>
@@ -102,6 +103,7 @@
 								</option>
 								<option id="com.atollic.truestudio.gcc.symbols.defined.2082391851" name="Defined symbols" superClass="com.atollic.truestudio.gcc.symbols.defined" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="STM32F405xx"/>
+									<listOptionValue builtIn="false" value="CORTEX_USE_FPU=TRUE"/>
 								</option>
 								<inputType id="com.atollic.truestudio.gcc.input.34301194" superClass="com.atollic.truestudio.gcc.input"/>
 							</tool>
@@ -114,8 +116,14 @@
 								<option id="com.atollic.truestudio.common_options.target.interwork.1248436263" name="Mix ARM/Thumb" superClass="com.atollic.truestudio.common_options.target.interwork" useByScannerDiscovery="false"/>
 								<option id="com.atollic.truestudio.ld.optimization.do_garbage.1464114778" name="Dead code removal " superClass="com.atollic.truestudio.ld.optimization.do_garbage" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<option id="com.atollic.truestudio.ld.general.scriptfile.595312261" name="Linker script" superClass="com.atollic.truestudio.ld.general.scriptfile" useByScannerDiscovery="false" value="../../../ld_eeprom_emu.ld" valueType="string"/>
-								<option id="com.atollic.truestudio.ld.misc.additional_objects.490307686" name="Additional object files" superClass="com.atollic.truestudio.ld.misc.additional_objects" useByScannerDiscovery="false" valueType="userObjs"/>
+								<option id="com.atollic.truestudio.ld.misc.additional_objects.490307686" name="Additional object files" superClass="com.atollic.truestudio.ld.misc.additional_objects" useByScannerDiscovery="false"/>
 								<option id="com.atollic.truestudio.ld.misc.linkerflags.1664993994" name="Other options" superClass="com.atollic.truestudio.ld.misc.linkerflags" useByScannerDiscovery="false" value="-Wl,-cref,-u,Reset_Handler,--defsym=__main_stack_size__=0x400,--defsym=__process_stack_size__=0x400" valueType="string"/>
+								<option id="com.atollic.truestudio.ld.general.nostdlib.305883283" name="No startup or default libs" superClass="com.atollic.truestudio.ld.general.nostdlib" useByScannerDiscovery="false" value="false" valueType="boolean"/>
+								<option id="com.atollic.truestudio.ld.general.syscall_lib.1560652859" name="System calls" superClass="com.atollic.truestudio.ld.general.syscall_lib" useByScannerDiscovery="false" value="com.atollic.truestudio.ld.general.syscalls_lib.nothing" valueType="enumerated"/>
+								<option id="com.atollic.truestudio.ld.general.nostartfiles.271224986" name="Do not use standard start files" superClass="com.atollic.truestudio.ld.general.nostartfiles" useByScannerDiscovery="false" value="false" valueType="boolean"/>
+								<option id="com.atollic.truestudio.ld.libraries.searchpath.1439552940" name="Library search path" superClass="com.atollic.truestudio.ld.libraries.searchpath" useByScannerDiscovery="false" valueType="libPaths">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/ChibiOS_3.0.2/os/common/ports/ARMCMx/compilers/GCC}&quot;"/>
+								</option>
 								<inputType id="com.atollic.truestudio.ld.input.851506670" name="Input" superClass="com.atollic.truestudio.ld.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -302,4 +310,5 @@
 			<resource resourceType="PROJECT" workspacePath="/oroca_bldc"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
